<resources>
    <string name="app_name">Attendance</string>
    <string name="codeFind">Enter Session Code...</string>
    <string name="attendButton">Attend!</string>
    <string name="textCreate">Create Session</string>
    <string name="className">Enter the Class Name</string>
    <string name="radioText">Session Length</string>
    <string name="createButton">Create Session</string>
    <string name="idLogin">Enter your zID</string>
    <string name="passwordLogin">Enter password</string>
    <string name="zIDRegister">Enter zID</string>
    <string name="password1">Enter a password</string>
    <string name="password2">Confirm password</string>
    <string name="accountType">Select Account Type</string>
    <string name="register">Register</string>
    <string name="zIDAttend">Enter zID</string>
    <string name="student">Student</string>
    <string name="Teacher">Tutor</string>
    <string name="login">login</string>
    <string name="textTutName">Sessions Available</string>

    <array name="zid">
        <item>z3000001</item>
        <item>z3000002</item>
        <item>z3000003</item>
        <item>z3000004</item>
        <item>z3000005</item>
        <item>z3000006</item>
        <item>z3000007</item>
    </array>

    <array name="classes">
        <item>class0- week 1</item>
        <item>class0- week 2</item>
        <item>class0- week 3</item>
        <item>class0- week 4</item>
        <item>class0- week5</item>

    </array>

</resources>