<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#e6fffa">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/idLogin"
        android:hint="@string/idLogin"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLogin"
        android:hint="@string/passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/idLogin"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"/>

</android.support.constraint.ConstraintLayout>